add context to build step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,8 @@ workflows:
   version: 2
   release:
     jobs:
-      - build
+      - build:
+          context: website
       - deploy:
           context: website
           requires:
