set up general page structure

--- a/_data/includes/header.yml
+++ b/_data/includes/header.yml
@@ -1,5 +1,13 @@
 de:
   about: Über uns
+  approach: Arbeitsweise
+  services: Leistungen
+  blog: Blog
+  jobs: Jobs
 
 en:
   about: About us
+  approach: Approach
+  services: Services
+  blog: Blog
+  jobs: Jobs
