--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ markdown: kramdown
 
 plugins:
   - jekyll-seo-tag
+  - jekyll-srcset
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
