first version of home screen

--- a/_data/includes/locations.yml
+++ b/_data/includes/locations.yml
@@ -24,6 +24,5 @@ de:
   main: Hauptsitz
 
 en:
-  imprint: Imprint
-  privacy: Privacy
-  partners: Partners
+  title: Warum von uns erzählen, wenn es um Sie geht.<br/>Wir sind an drei Standorten im Einsatz und freuen uns auf Ihren Anruf!
+  main: Hauptsitz
