--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -1,5 +1,45 @@
 de:
-  title: Über uns
+  intro_lead: Über uns
+  intro_title: Der Mensch steht bei uns im Vordergrund. Für ihn schaffen wir erlebbaren Mehrwert.
+  intro_text: "
+  D-LABS ist ein Beratungs- und Designunternehmen, das 2006 auf Initiative von Hasso Plattner, gemeinsam mit unserem geschäftsführenden Gesellschafter Jörn Hartwig gegründet wurde.
+
+
+  Wir konzipieren, optimieren und implementieren digitale Produkte und Services mit klarem Fokus auf das Wesentliche: den Bedürfnissen der Anwender.
+  "
+  intro_image: about.jpg
+
+  about_image: about.jpg
+  about_text: "
+  Nutzerzentriertes Arbeiten und Agilität sind für uns nicht nur Schlagworte, sondern konkrete Vorgehensweisen, die von unseren Experten aus den Bereichen User Research, Digital Experience Design, Software Engineering sowie Prozess- und Innovations-Management angewandt werden. Dieser interdisziplinäre Ansatz ermöglicht es uns flexibel die Perspektive zu wechseln, innovative Lösungsansätze zu entwickeln und die Potenziale der Digitalisierung nachhaltig nutzbar zu machen. So schaffen wir echte Mehrwerte.
+
+
+  Ein offener und vertrauensvoller Austausch mit unseren Kunden bildet dabei die Grundlage für eine erfolgreiche und effiziente Projektumsetzung. Dazu gehört auch, Wünsche kritisch zu hinterfragen, um das eigentliche Problem zu identifizieren, das einer Lösung bedarf.
+
+
+  Mehr als 400 erfolgreich realisierte Projekte in verschiedensten Branchen bestätigen unseren ganzheitlichen Beratungsansatz und motivieren uns zur kontinuierlichen Weiterentwicklung unserer Methoden und Kompetenzen.
+  "
+
+
 
 en:
-  title: About us
+  intro_lead: Über uns
+  intro_title: Der Mensch steht bei uns im Vordergrund. Für ihn schaffen wir erlebbaren Mehrwert.
+  intro_text: "
+  D-LABS ist ein Beratungs- und Designunternehmen, das 2006 auf Initiative von Hasso Plattner, gemeinsam mit unserem geschäftsführenden Gesellschafter Jörn Hartwig gegründet wurde.
+
+
+  Wir konzipieren, optimieren und implementieren digitale Produkte und Services mit klarem Fokus auf das Wesentliche: den Bedürfnissen der Anwender.
+  "
+  intro_image: about.jpg
+
+  about_image: about.jpg
+  about_text: "
+  Nutzerzentriertes Arbeiten und Agilität sind für uns nicht nur Schlagworte, sondern konkrete Vorgehensweisen, die von unseren Experten aus den Bereichen User Research, Digital Experience Design, Software Engineering sowie Prozess- und Innovations-Management angewandt werden. Dieser interdisziplinäre Ansatz ermöglicht es uns flexibel die Perspektive zu wechseln, innovative Lösungsansätze zu entwickeln und die Potenziale der Digitalisierung nachhaltig nutzbar zu machen. So schaffen wir echte Mehrwerte.
+
+
+  Ein offener und vertrauensvoller Austausch mit unseren Kunden bildet dabei die Grundlage für eine erfolgreiche und effiziente Projektumsetzung. Dazu gehört auch, Wünsche kritisch zu hinterfragen, um das eigentliche Problem zu identifizieren, das einer Lösung bedarf.
+
+
+  Mehr als 400 erfolgreich realisierte Projekte in verschiedensten Branchen bestätigen unseren ganzheitlichen Beratungsansatz und motivieren uns zur kontinuierlichen Weiterentwicklung unserer Methoden und Kompetenzen.
+  "
