beginnings of approach page

--- a/_data/pages/approach.yml
+++ b/_data/pages/approach.yml
@@ -1,5 +1,9 @@
 de:
-  title: Arbeitsweise
+  intro_lead: Wie wir arbeiten
+  intro_text: "
+    Die Arbeitsweise von D-LABS orientiert sich an den Ansätzen und Methoden des **Design Thinking** und **Human-centred Design** und stellt immer den Nutzer in den Mittelpunkt.
+  "
+  intro_cta_text: Unser Vorgehen in Projekten
 
 en:
   title: Approach
