add blog, category pages

--- a/_data/pages/blog.yml
+++ b/_data/pages/blog.yml
@@ -1,5 +1,7 @@
 de:
   cta_learn_more: Mehr erfahren
+  back_button_text: Zurück zur Übersicht
 
 en:
   cta_learn_more: Mehr erfahren
+  back_button_text: Zurück zur Übersicht
