--- a/_data/pages/services.yml
+++ b/_data/pages/services.yml
@@ -29,6 +29,7 @@ de:
 
   services_title: Leistungen und Methoden
   services_all_button: Alle
+  back_button_text: Zurück zur Übersicht
 
 en:
   title: Services
