--- a/_data/pages/home.yml
+++ b/_data/pages/home.yml
@@ -96,6 +96,7 @@ de:
 
   clients_heading: Unsere Kunden
   clients_show_more: Mehr Anzeigen
+  clients_show_less: Weniger Anzeigen
 
   blog_cta_text: Erfahren Sie Mehr
 
@@ -128,6 +129,7 @@ en:
 
   clients_heading: Unsere Kunden
   clients_show_more: Mehr Anzeigen
+  clients_show_less: Weniger Anzeigen
 
   blog_cta_text: Erfahren Sie Mehr
 
