fixes for about page

--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -9,7 +9,7 @@ de:
   "
   intro_image: about.jpg
 
-  about_image: about.jpg
+  about_image: about-us.jpg
   about_text: "
   Nutzerzentriertes Arbeiten und Agilität sind für uns nicht nur Schlagworte, sondern konkrete Vorgehensweisen, die von unseren Experten aus den Bereichen User Research, Digital Experience Design, Software Engineering sowie Prozess- und Innovations-Management angewandt werden. Dieser interdisziplinäre Ansatz ermöglicht es uns flexibel die Perspektive zu wechseln, innovative Lösungsansätze zu entwickeln und die Potenziale der Digitalisierung nachhaltig nutzbar zu machen. So schaffen wir echte Mehrwerte.
 
@@ -33,7 +33,7 @@ en:
   "
   intro_image: about.jpg
 
-  about_image: about.jpg
+  about_image: about-us.jpg
   about_text: "
   Nutzerzentriertes Arbeiten und Agilität sind für uns nicht nur Schlagworte, sondern konkrete Vorgehensweisen, die von unseren Experten aus den Bereichen User Research, Digital Experience Design, Software Engineering sowie Prozess- und Innovations-Management angewandt werden. Dieser interdisziplinäre Ansatz ermöglicht es uns flexibel die Perspektive zu wechseln, innovative Lösungsansätze zu entwickeln und die Potenziale der Digitalisierung nachhaltig nutzbar zu machen. So schaffen wir echte Mehrwerte.
 
