improve approach animation

--- a/_data/pages/approach.yml
+++ b/_data/pages/approach.yml
@@ -12,24 +12,20 @@ de:
   "
   intro_cta_text: Unser Vorgehen in Projekten
 
+  slider_lead: Unser Vorgehen
+
   screens:
-    - lead: Unser Vorgehen
-      title: Überblick
+    - title: Überblick
       text: Je nach Anforderung können Lesiungen aus unseren verhsciedne Kompetenzfeldern im Projekt zur Anwendung
-    - lead: Unser Vorgehen
-      title: 360°-Sicht
+    - title: 360°-Sicht
       text: Ganzheitliche Analyse des Projekt­umfeldes und umfassende Untersuchung der Nutzerbedürfnisse.
-    - lead: Unser Vorgehen
-      title: Synthese
+    - title: Synthese
       text: Zusammenfassung, Strukturierung und Bewertung der ­gewonnenen Erkennt­nisse und Definition der Anforderungen.
-    - lead: Unser Vorgehen
-      title: Konzept + Design
+    - title: Konzept + Design
       text: Ideenentwicklung, Prototyping und Ausarbeitung erster ­Lösungs­ansätze im interdisziplinären Team.
-    - lead: Unser Vorgehen
-      title: Umsetzung
+    - title: Umsetzung
       text: Iterative Optimierung des ­Konzeptes bis hin zur Lösung, die den ­Bedürfnissen aller Stakeholder ­gerecht wird.
-    - lead: Unser Vorgehen
-      title: Training
+    - title: Training
       text: Trainings zu agilen Themen, Durchführung von digitalen Projekten und inter­disziplinärer Zusammenarbeit.
 
   projects_link_text: Projektbeispiele
@@ -132,24 +128,20 @@ en:
   "
   intro_cta_text: Unser Vorgehen in Projekten
 
+  slider_lead: Unser Vorgehen
+
   screens:
-    - lead: Unser Vorgehen
-      title: Überblick
+    - title: Überblick
       text: Je nach Anforderung können Lesiungen aus unseren verhsciedne Kompetenzfeldern im Projekt zur Anwendung
-    - lead: Unser Vorgehen
-      title: 360°-Sicht
+    - title: 360°-Sicht
       text: Ganzheitliche Analyse des Projekt­umfeldes und umfassende Untersuchung der Nutzerbedürfnisse.
-    - lead: Unser Vorgehen
-      title: Synthese
+    - title: Synthese
       text: Zusammenfassung, Strukturierung und Bewertung der ­gewonnenen Erkennt­nisse und Definition der Anforderungen.
-    - lead: Unser Vorgehen
-      title: Konzept + Design
+    - title: Konzept + Design
       text: Ideenentwicklung, Prototyping und Ausarbeitung erster ­Lösungs­ansätze im interdisziplinären Team.
-    - lead: Unser Vorgehen
-      title: Umsetzung
+    - title: Umsetzung
       text: Iterative Optimierung des ­Konzeptes bis hin zur Lösung, die den ­Bedürfnissen aller Stakeholder ­gerecht wird.
-    - lead: Unser Vorgehen
-      title: Training
+    - title: Training
       text: Trainings zu agilen Themen, Durchführung von digitalen Projekten und inter­disziplinärer Zusammenarbeit.
 
   projects_link_text: Projektbeispiele
