separate locations components

--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -20,6 +20,8 @@ de:
   Mehr als 400 erfolgreich realisierte Projekte in verschiedensten Branchen bestätigen unseren ganzheitlichen Beratungsansatz und motivieren uns zur kontinuierlichen Weiterentwicklung unserer Methoden und Kompetenzen.
   "
 
+  location_title: Warum von uns erzählen, wenn es um Sie geht.<br/>Wir sind an drei Standorten im Einsatz und freuen uns auf Ihren Anruf!
+
 
 
 en:
@@ -43,3 +45,5 @@ en:
 
   Mehr als 400 erfolgreich realisierte Projekte in verschiedensten Branchen bestätigen unseren ganzheitlichen Beratungsansatz und motivieren uns zur kontinuierlichen Weiterentwicklung unserer Methoden und Kompetenzen.
   "
+
+  location_title: Warum von uns erzählen, wenn es um Sie geht.<br/>Wir sind an drei Standorten im Einsatz und freuen uns auf Ihren Anruf!
