--- a/_data/includes/locations.yml
+++ b/_data/includes/locations.yml
@@ -3,26 +3,29 @@ locations:
     is_main: true
     img: location-berlin.jpg
     street: Marlene-Dietrich-Allee 15
-    city: 14482 Potsdam
+    zip: 14482
+    city: Potsdam
     tel: +49 331 97 992 300
     email: potsdam@d-labs.com
   - name: Berlin
     img: location-berlin.jpg
     street: Matkowskystraße 2
-    city: 10245 Berlin
+    zip: 10245
+    city: Berlin
     tel: +49 30 29 387 978
     email: berlin@d-labs.com
   - name: Stuttgart
     img: location-berlin.jpg
     street: Königstraße 21
-    city: 70173 Stuttgart
+    zip: 70173
+    city: Stuttgart
     tel: +49 711 99 796 266
     email: stuttgart@d-labs.com
 
 de:
-  title: Warum von uns erzählen, wenn es um Sie geht.<br/>Wir sind an drei Standorten im Einsatz und freuen uns auf Ihren Anruf!
+  title: Kontakt
   main: Hauptsitz
 
 en:
-  title: Warum von uns erzählen, wenn es um Sie geht.<br/>Wir sind an drei Standorten im Einsatz und freuen uns auf Ihren Anruf!
+  title: Kontakt
   main: Hauptsitz
