--- a/_data/pages/jobs.yml
+++ b/_data/pages/jobs.yml
@@ -2,6 +2,30 @@ de:
   title_text: '**Zusammen arbeiten,**<br/>gestalten und erleben'
 
   intro_text: 'Und bei dir so? Bereichere unser Team mit deinen Fähigkeiten und deiner Persönlichkeit und starte eine nachhaltige Karriere.'
+  list_title: Wir suchen
+
+  jobs:
+    - title: Senior Consultant Processes & Innovation (m/w/d)
+      location: Stuttgart
+    - title: Software Engineer (m/w/d)
+      location: Potsdam
+
+  initiative_text: 'Nichts Passendes dabei? Dann mach einen Vorschlag, wie du unser Team verstärken kannst. Wir freuen uns auf deine Unterlagen!'
+  initiative_button_label: Jetzt initiativ bewerben
+  initiative_button_target: mailto:info@example.com
+
+  slider_title: Menschen bei d-labs
+
+  slides:
+    - name: Peter Weller
+      position: Researcher
+      quote: Weil wir die Welt jeden Tag ein Stück zugänglicher machen. Mit unserem Fokus auf den Bedürfnissen der Endanwender, schaffen wir Lösungen die unsere Kunden begeistern. Hier wird User Experience gelebt.
+      img: about.jpg
+    - name: Peter Weller
+      position: Researcher
+      quote: Weil wir die Welt jeden Tag ein Stück zugänglicher machen. Mit unserem Fokus auf den Bedürfnissen der Endanwender, schaffen wir Lösungen die unsere Kunden begeistern. Hier wird User Experience gelebt.
+      img: about.jpg
+
 
   contact:
     title: Für Fragen stehen wir Dir gern zur Verfügung.
@@ -18,11 +42,37 @@ de:
 en:
   title_text: '**Zusammen arbeiten,**<br/>gestalten und erleben'
 
+  intro_text: 'Und bei dir so? Bereichere unser Team mit deinen Fähigkeiten und deiner Persönlichkeit und starte eine nachhaltige Karriere.'
+  list_title: Wir suchen
+
+  jobs:
+    - title: Senior Consultant Processes & Innovation (m/w/d)
+      location: Stuttgart
+    - title: Software Engineer (m/w/d)
+      location: Potsdam
+
+  initiative_text: 'Nichts Passendes dabei? Dann mach einen Vorschlag, wie du unser Team verstärken kannst. Wir freuen uns auf deine Unterlagen!'
+  initiative_button_label: Jetzt initiativ bewerben
+  initiative_button_target: mailto:info@example.com
+
+  slider_title: Menschen bei d-labs
+
+  slides:
+    - name: Peter Weller
+      position: Researcher
+      quote: Weil wir die Welt jeden Tag ein Stück zugänglicher machen. Mit unserem Fokus auf den Bedürfnissen der Endanwender, schaffen wir Lösungen die unsere Kunden begeistern. Hier wird User Experience gelebt.
+      img: about.jpg
+    - name: Peter Weller
+      position: Researcher
+      quote: Weil wir die Welt jeden Tag ein Stück zugänglicher machen. Mit unserem Fokus auf den Bedürfnissen der Endanwender, schaffen wir Lösungen die unsere Kunden begeistern. Hier wird User Experience gelebt.
+      img: about.jpg
+
+
   contact:
     title: Für Fragen stehen wir Dir gern zur Verfügung.
     avatar_img: about.jpg
-    name: Till Heinrich
-    position: Sales Manager
+    name: Uta Kanthack
+    position: Business Administration & Controlling
     tel: +49 331 97 992 303
     mobile: +49 151 46 756 702
     email: till.heinrich@d-labs.com
