--- a/_data/pages/approach.yml
+++ b/_data/pages/approach.yml
@@ -16,7 +16,7 @@ de:
 
   screens:
     - title: Überblick
-      text: Je nach Anforderung können Lesiungen aus unseren verhsciedne Kompetenzfeldern im Projekt zur Anwendung
+      text: Je nach Anforderung können Lesiungen aus unseren verschiedene Kompetenzfeldern im Projekt zur Anwendung
     - title: 360°-Sicht
       text: Ganzheitliche Analyse des Projekt­umfeldes und umfassende Untersuchung der Nutzerbedürfnisse.
     - title: Synthese
