Use non-breaking hyphen for all D-LABS occurences

--- a/_data/pages/about.yml
+++ b/_data/pages/about.yml
@@ -2,7 +2,7 @@ de:
   intro_lead: Über uns
   intro_title: Der Mensch steht bei uns im Vordergrund. Für ihn schaffen wir erlebbaren Mehrwert.
   intro_text: "
-  D-LABS ist ein Beratungs- und Designunternehmen, das 2006 auf Initiative von Hasso Plattner, gemeinsam mit unserem geschäftsführenden Gesellschafter Jörn Hartwig gegründet wurde.
+  D‑LABS ist ein Beratungs- und Designunternehmen, das 2006 auf Initiative von Hasso Plattner, gemeinsam mit unserem geschäftsführenden Gesellschafter Jörn Hartwig gegründet wurde.
 
 
   Wir konzipieren, optimieren und implementieren digitale Produkte und Services mit klarem Fokus auf das Wesentliche: den Bedürfnissen der Anwender.
@@ -28,7 +28,7 @@ en:
   intro_lead: Über uns
   intro_title: Der Mensch steht bei uns im Vordergrund. Für ihn schaffen wir erlebbaren Mehrwert.
   intro_text: "
-  D-LABS ist ein Beratungs- und Designunternehmen, das 2006 auf Initiative von Hasso Plattner, gemeinsam mit unserem geschäftsführenden Gesellschafter Jörn Hartwig gegründet wurde.
+  D‑LABS ist ein Beratungs- und Designunternehmen, das 2006 auf Initiative von Hasso Plattner, gemeinsam mit unserem geschäftsführenden Gesellschafter Jörn Hartwig gegründet wurde.
 
 
   Wir konzipieren, optimieren und implementieren digitale Produkte und Services mit klarem Fokus auf das Wesentliche: den Bedürfnissen der Anwender.
