--- a/_data/pages/approach.yml
+++ b/_data/pages/approach.yml
@@ -8,7 +8,7 @@ task_types:
 de:
   intro_lead: Wie wir arbeiten
   intro_text: "
-    Die Arbeitsweise von D-LABS orientiert sich an den Ansätzen und Methoden des **Design Thinking** und **Human-centred Design** und stellt immer den Nutzer in den Mittelpunkt.
+    Die Arbeitsweise von D‑LABS orientiert sich an den Ansätzen und Methoden des **Design Thinking** und **Human-centred Design** und stellt immer den Nutzer in den Mittelpunkt.
   "
   intro_cta_text: Unser Vorgehen in Projekten
 
@@ -124,7 +124,7 @@ de:
 en:
   intro_lead: Wie wir arbeiten
   intro_text: "
-    Die Arbeitsweise von D-LABS orientiert sich an den Ansätzen und Methoden des **Design Thinking** und **Human-centred Design** und stellt immer den Nutzer in den Mittelpunkt.
+    Die Arbeitsweise von D‑LABS orientiert sich an den Ansätzen und Methoden des **Design Thinking** und **Human-centred Design** und stellt immer den Nutzer in den Mittelpunkt.
   "
   intro_cta_text: Unser Vorgehen in Projekten
 
